Separated client binary from node