@@ -161,7 +161,7 @@ lazy val node = (project in file("node"))
   .settings(commonSettings: _*)
   .enablePlugins(RpmPlugin, DebianPlugin, JavaAppPackaging, BuildInfoPlugin)
   .settings(
-    version := "0.7.1",
+    version := "0.0.1",
     name := "node",
     maintainer := "Pyrofex, Inc. <info@pyrofex.net>",
     packageSummary := "CasperLabs Node",
@@ -221,12 +221,12 @@ lazy val node = (project in file("node"))
     /* Dockerization */
     dockerUsername := Some(organization.value),
     version in Docker := version.value +
-      git.gitHeadCommit.value.map("-git" + _.take(8)).getOrElse(""),
+      git.gitHeadCommit.value.fold("")("-git" + _.take(8)),
     dockerAliases ++=
       sys.env
         .get("DRONE_BUILD_NUMBER")
         .toSeq
-        .map(num => dockerAlias.value.withTag(Some(s"DRONE-${num}"))),
+        .map(num => dockerAlias.value.withTag(Some(s"DRONE-$num"))),
     dockerUpdateLatest := sys.env.get("DRONE").isEmpty,
     dockerBaseImage := "openjdk:11-jre-slim",
     dockerCommands := {
@@ -296,6 +296,71 @@ lazy val smartContracts = (project in file("smart-contracts"))
     name := "smart-contracts",
     version := "0.0.1-SNAPSHOT",
     libraryDependencies ++= commonDependencies
+  )
+  .dependsOn(shared, models)
+
+lazy val client = (project in file("client"))
+  .enablePlugins(JavaAppPackaging, BuildInfoPlugin)
+  .settings(commonSettings: _*)
+  .settings(
+    name := "client",
+    version := "0.0.1-SNAPSHOT",
+    libraryDependencies ++= commonDependencies ++ Seq(scallop, grpcNetty),
+    buildInfoKeys := Seq[BuildInfoKey](name, version, scalaVersion, sbtVersion, git.gitHeadCommit),
+    buildInfoPackage := "io.casperlabs.client",
+    /* Dockerization */
+    dockerUsername := Some(organization.value),
+    version in Docker := version.value +
+      git.gitHeadCommit.value.fold("")("-git" + _.take(8)),
+    dockerAliases ++=
+      sys.env
+        .get("DRONE_BUILD_NUMBER")
+        .toSeq
+        .map(num => dockerAlias.value.withTag(Some(s"DRONE-$num"))),
+    dockerUpdateLatest := sys.env.get("DRONE").isEmpty,
+    dockerBaseImage := "openjdk:11-jre-slim",
+    dockerCommands := {
+      val daemon = (daemonUser in Docker).value
+      Seq(
+        Cmd("FROM", dockerBaseImage.value),
+        ExecCmd("RUN", "apt", "update"),
+        ExecCmd("RUN", "apt", "install", "-yq", "openssl"),
+        Cmd("LABEL", s"""MAINTAINER="${maintainer.value}""""),
+        Cmd("WORKDIR", (defaultLinuxInstallLocation in Docker).value),
+        Cmd("ADD", s"--chown=$daemon:$daemon opt /opt"),
+        Cmd("USER", "root"),
+        ExecCmd("ENTRYPOINT", "bin/client"),
+        ExecCmd("CMD", "run")
+      )
+    },
+    /*
+     * This monstrosity exists because
+     * a) we want to get rid of annoying JVM >= 9 warnings,
+     * b) we must support Java 8 for RedHat (see below) and
+     * c) sbt-native-packager puts bashScriptExtraDefines before it
+     *    initializes all useful variables (like $java_version).
+     *
+     * This won't work if someone passes -no-version-check command line
+     * argument to rnode. They most probably know what they're doing.
+     *
+     * https://unix.stackexchange.com/a/29742/124070
+     * Thanks Gilles!
+     */
+    bashScriptExtraDefines += """
+      eval "original_$(declare -f java_version_check)"
+      java_version_check() {
+        original_java_version_check
+        if [[ ${java_version%%.*} -ge 9 ]]; then
+          java_args+=(
+            --illegal-access=warn # set to deny if you feel brave
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.security.util=ALL-UNNAMED
+            --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+          )
+        fi
+      }
+    """
   )
   .dependsOn(shared, models)
 
